#50 The year has been removed from the price

--- a/rms-donation-manager/src/main/resources/static/event.html
+++ b/rms-donation-manager/src/main/resources/static/event.html
@@ -11,13 +11,13 @@
 				<div class='row'>
 					<div class='col-sm-4'>
 						<div class='form-group'>
-							<label for="eventName">Event Name <b ng-show="newEventView">*</b></label>
+							<label for="eventName">Event Name <b>*</b></label>
 							<input type="text" id="eventName" class='form-control' ng-model="event.name" placeholder="Event Name"/>
 						</div>
 					</div>
 					<div class='col-sm-2'>
 						<div class='form-group'>
-							<label for="year">Year <b ng-show="newEventView">*</b></label>
+							<label for="year">Year <b>*</b></label>
 							<input type="text" id="year" class='form-control' ng-model="event.year" placeholder="Year"/>
 						</div>
 					</div>
@@ -45,13 +45,13 @@
 				<div class='row'>
 					<div class='col-sm-2'>
 						<div class='form-group'>
-							<label for="ticketPrice">Ticket Price <b ng-show="newEventView">*</b></label>
+							<label for="ticketPrice">Ticket Price <b>*</b></label>
 							<input type="text" id="ticketPrice" class='form-control' ng-model="ticketPrice.price" placeholder="Ticket Price"/>
 						</div>
 					</div>
 					<div class='col-sm-2'>
 						<div class='form-group'>
-							<label for="cost">Cost <b ng-show="newEventView">*</b></label>
+							<label for="cost">Cost <b>*</b></label>
 							<input type="text" id="cost" class='form-control' ng-model="ticketPrice.cost" placeholder="Cost"/>
 						</div>
 					</div>
