#54 Option to list tables and tickets from event
The option to make an event active or inactive was added too.

Also when adding a ticket to a table the tickets listed are from the
event selected.
The same when relating a table to a ticket. The only tables listed are
those from the event selected.

--- a/rms-donation-manager/src/main/resources/static/tickets.html
+++ b/rms-donation-manager/src/main/resources/static/tickets.html
@@ -13,10 +13,10 @@
 				</div>
 				<div class="row">
 					<div class="form-group col-sm-6">
-						<input type="text" class="form-control" ng-model="searchValue"  dl-enter-key="setPage(1)"/>
+						<input type="text" class="form-control" ng-model="searchValue"  dl-enter-key="getTicketsOfEvent(1)"/>
 					</div>
 					<div class="form-group col-sm-6">
-						<a ng-click="setPage(1)" class="btn btn-small btn-primary">Search</a>
+						<a ng-click="getTicketsOfEvent(1)" class="btn btn-small btn-primary">Search</a>
 					</div>
 				</div>
 			</form>
@@ -34,7 +34,24 @@
 		<a ng-click="showAlert=false" class="close" data-dismiss="alert" aria-label="close">&times;</a>
 		{{message}}
 	</div>
-	<table class="table table-striped">
+	<div class="panel panel-default">
+		<div class="panel-body">
+			<form name="filterByEvent">
+				<div class="row">
+					<div class="form-group col-sm-2">
+						<label for="event" class="control-label">Event:</label>
+					</div>
+				</div>
+				<div class="row">
+					<div class="form-group col-sm-2" ng-repeat="e in events">
+						<a ng-click="getTicketsOfEvent(e, 1)" class="btn btn-small btn-primary">{{e.name}} {{e.year}}</a>
+					</div>
+				</div>
+			</form>
+		</div>
+	</div>
+	<h1 class="text-center" ng-show="eventSelected">{{selectedEvent.name}} {{selectedEvent.year}}</h1>
+	<table class="table table-striped" ng-show="eventSelected">
 		<thead>
 			<tr>
 				<th>Ticket Number</th>
@@ -72,19 +89,19 @@
 	<div class="text-center">
 		<ul ng-if="pager.totalPages" class="pagination">
 		    <li ng-class="{disabled:pager.currentPage === 1}">
-		        <a ng-click="setPage(1)">First</a>
+		        <a ng-click="getTicketsOfEvent(selectedEvent, 1)">First</a>
 		    </li>
 		    <li ng-class="{disabled:pager.currentPage === 1}">
-		        <a ng-click="setPage(pager.currentPage - 1)">Previous</a>
+		        <a ng-click="getTicketsOfEvent(selectedEvent, pager.currentPage - 1)">Previous</a>
 		    </li>
 		    <li ng-repeat="page in pager.pages" ng-class="{active:pager.currentPage === page}">
-		        <a ng-click="setPage(page)">{{page}}</a>
+		        <a ng-click="getTicketsOfEvent(selectedEvent, page)">{{page}}</a>
 		    </li>                
 		    <li ng-class="{disabled:pager.currentPage === pager.totalPages}">
-		        <a ng-click="setPage(pager.currentPage + 1)">Next</a>
+		        <a ng-click="getTicketsOfEvent(selectedEvent, pager.currentPage + 1)">Next</a>
 		    </li>
 		    <li ng-class="{disabled:pager.currentPage === pager.totalPages}">
-		        <a ng-click="setPage(pager.totalPages)">Last</a>
+		        <a ng-click="getTicketsOfEvent(selectedEvent, pager.totalPages)">Last</a>
 		    </li>
 		</ul>
 	</div>
