--- a/rms-donation-manager/src/main/resources/static/events.html
+++ b/rms-donation-manager/src/main/resources/static/events.html
@@ -30,7 +30,10 @@
 			</form>
 		</div>
 	</div>
-
+	<div ng-show="showAlert" class="alert alert-{{alertKind}} alert-dismissible fade in">
+		<a ng-click="showAlert=false" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+		{{message}}
+	</div>
 	<table class="table table-striped">
 		<thead>
 			<tr>
@@ -38,6 +41,7 @@
 				<th>Year</th>
 				<th>Masters of Ceremony</th>
 				<th>Venue</th>
+				<th>Active</th>
 				<th><a href="#!/newevent">+ Event</a></th>
 			</tr>
 		</thead>
@@ -48,6 +52,7 @@
 				<td>{{e.year}}</td>
 				<td>{{e.mastersOfCeremony}}</td>
 				<td>{{e.venue}}</td>
+				<td><input type="checkbox" id="isActive" class='form-group' ng-model="e.isActive" ng-change="updateIsActive(e._links.self.href, e.isActive)"/></td>
 				<td><a ng-click="deleteEvent(t._links.self.href)" class="btn btn-small btn-primary">delete</a></td>
 			</tr>
 		</tbody>
