--- a/rms-donation-manager/src/main/resources/static/tables.html
+++ b/rms-donation-manager/src/main/resources/static/tables.html
@@ -13,10 +13,10 @@
 				</div>
 				<div class="row">
 					<div class="form-group col-sm-6">
-						<input type="text" class="form-control" ng-model="searchValue" dl-enter-key="setPage(1)"/>
+						<input type="text" class="form-control" ng-model="searchValue" dl-enter-key="getTablesOfEvent(selectedEvent, 1)"/>
 					</div>
 					<div class="form-group col-sm-6">
-						<a ng-click="setPage(1)" class="btn btn-small btn-primary">Search</a>
+						<a ng-click="getTablesOfEvent(selectedEvent, 1)" class="btn btn-small btn-primary">Search</a>
 					</div>
 				</div>
 			</form>
@@ -31,7 +31,29 @@
 		</div>
 	</div>
 	
-	<table class="table table-striped">
+	<div ng-show="showAlert" class="alert alert-{{alertKind}} alert-dismissible fade in">
+		<a ng-click="showAlert=false" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+		{{message}}
+	</div>
+	<div class="panel panel-default">
+		<div class="panel-body">
+			<form name="filterByEvent">
+				<div class="row">
+					<div class="form-group col-sm-2">
+						<label for="event" class="control-label">Event:</label>
+					</div>
+				</div>
+				<div class="row">
+					<div class="form-group col-sm-2" ng-repeat="e in events">
+						<a ng-click="getTablesOfEvent(e, 1)" class="btn btn-small btn-primary">{{e.name}} {{e.year}}</a>
+					</div>
+				</div>
+			</form>
+		</div>
+	</div>
+	<h1 class="text-center" ng-show="eventSelected">{{selectedEvent.name}} {{selectedEvent.year}}</h1>
+	
+	<table class="table table-striped" ng-show="eventSelected">
 		<thead>
 			<tr>
 				<th>Table Number</a></th>
@@ -60,19 +82,19 @@
 	<div class="text-center">
 		<ul ng-if="pager.totalPages" class="pagination">
 		    <li ng-class="{disabled:pager.currentPage === 1}">
-		        <a ng-click="setPage(1)">First</a>
+		        <a ng-click="getTablesOfEvent(selectedEvent, 1)">First</a>
 		    </li>
 		    <li ng-class="{disabled:pager.currentPage === 1}">
-		        <a ng-click="setPage(pager.currentPage - 1)">Previous</a>
+		        <a ng-click="getTablesOfEvent(selectedEvent, pager.currentPage - 1)">Previous</a>
 		    </li>
 		    <li ng-repeat="page in pager.pages" ng-class="{active:pager.currentPage === page}">
-		        <a ng-click="setPage(page)">{{page}}</a>
+		        <a ng-click="getTablesOfEvent(selectedEvent, page)">{{page}}</a>
 		    </li>                
 		    <li ng-class="{disabled:pager.currentPage === pager.totalPages}">
-		        <a ng-click="setPage(pager.currentPage + 1)">Next</a>
+		        <a ng-click="getTablesOfEvent(selectedEvent, pager.currentPage + 1)">Next</a>
 		    </li>
 		    <li ng-class="{disabled:pager.currentPage === pager.totalPages}">
-		        <a ng-click="setPage(pager.totalPages)">Last</a>
+		        <a ng-click="getTablesOfEvent(selectedEvent, pager.totalPages)">Last</a>
 		    </li>
 		</ul>
 	</div>
