--- a/rms-donation-manager/src/main/resources/static/tickets.html
+++ b/rms-donation-manager/src/main/resources/static/tickets.html
@@ -13,7 +13,7 @@
 				</div>
 				<div class="row">
 					<div class="form-group col-sm-6">
-						<input type="text" class="form-control" ng-model="searchValue"  dl-enter-key="getTicketsOfEvent(1)"/>
+						<input type="text" class="form-control" ng-model="searchValue"  dl-enter-key="getTicketsOfEvent(selectedEvent, 1)"/>
 					</div>
 					<div class="form-group col-sm-6">
 						<a ng-click="getTicketsOfEvent(1)" class="btn btn-small btn-primary">Search</a>
