--- a/rms-donation-manager/src/main/resources/static/tickets.html
+++ b/rms-donation-manager/src/main/resources/static/tickets.html
@@ -16,7 +16,7 @@
 						<input type="text" class="form-control" ng-model="searchValue"  dl-enter-key="getTicketsOfEvent(selectedEvent, 1)"/>
 					</div>
 					<div class="form-group col-sm-6">
-						<a ng-click="getTicketsOfEvent(1)" class="btn btn-small btn-primary">Search</a>
+						<a ng-click="getTicketsOfEvent(selectedEvent, 1)" class="btn btn-small btn-primary">Search</a>
 					</div>
 				</div>
 			</form>
