#42 non-profit option added.
It looks ugly for now.

--- a/rms-donation-manager/src/main/resources/static/organization.html
+++ b/rms-donation-manager/src/main/resources/static/organization.html
@@ -11,6 +11,12 @@
 							<input type="text" id="organizationName" class='form-control' ng-model="organization.name" placeholder="Organization Name"/>
 						</div>
 					</div>
+					<div class='col-sm-2'>
+						<div class='form-group'>
+							<label for="nonProfit">Non Profit</label>
+							<input type="checkbox" id="nonProfit" class='form-control' ng-model="organization.nonProfit"/>
+						</div>
+					</div>
 				</div>
 			</form>
 		</div>
