--- a/rms-donation-manager/src/main/resources/static/tickets.html
+++ b/rms-donation-manager/src/main/resources/static/tickets.html
@@ -13,10 +13,10 @@
 				</div>
 				<div class="row">
 					<div class="form-group col-sm-6">
-						<input type="text" class="form-control" ng-model="searchValue"  dl-enter-key="getTicketsOfEvent(selectedEvent, 1)"/>
+						<input type="text" class="form-control" ng-model="searchValue"  dl-enter-key="getTicketsOfEvent(true, selectedEvent, 1)"/>
 					</div>
 					<div class="form-group col-sm-6">
-						<a ng-click="getTicketsOfEvent(selectedEvent, 1)" class="btn btn-small btn-primary">Search</a>
+						<a ng-click="getTicketsOfEvent(true, selectedEvent, 1)" class="btn btn-small btn-primary">Search</a>
 					</div>
 				</div>
 			</form>
@@ -44,7 +44,7 @@
 				</div>
 				<div class="row">
 					<div class="form-group col-sm-2" ng-repeat="e in events">
-						<a ng-click="getTicketsOfEvent(e, 1)" class="btn btn-small btn-primary">{{e.name}} {{e.year}}</a>
+						<a ng-click="getTicketsOfEvent(false, e, 1)" class="btn btn-small btn-primary">{{e.name}} {{e.year}}</a>
 					</div>
 				</div>
 			</form>
@@ -89,19 +89,19 @@
 	<div class="text-center">
 		<ul ng-if="pager.totalPages" class="pagination">
 		    <li ng-class="{disabled:pager.currentPage === 1}">
-		        <a ng-click="getTicketsOfEvent(selectedEvent, 1)">First</a>
+		        <a ng-click="getTicketsOfEvent(isSearch, selectedEvent, 1)">First</a>
 		    </li>
 		    <li ng-class="{disabled:pager.currentPage === 1}">
-		        <a ng-click="getTicketsOfEvent(selectedEvent, pager.currentPage - 1)">Previous</a>
+		        <a ng-click="getTicketsOfEvent(isSearch, selectedEvent, pager.currentPage - 1)">Previous</a>
 		    </li>
 		    <li ng-repeat="page in pager.pages" ng-class="{active:pager.currentPage === page}">
-		        <a ng-click="getTicketsOfEvent(selectedEvent, page)">{{page}}</a>
+		        <a ng-click="getTicketsOfEvent(isSearch, selectedEvent, page)">{{page}}</a>
 		    </li>                
 		    <li ng-class="{disabled:pager.currentPage === pager.totalPages}">
-		        <a ng-click="getTicketsOfEvent(selectedEvent, pager.currentPage + 1)">Next</a>
+		        <a ng-click="getTicketsOfEvent(isSearch, selectedEvent, pager.currentPage + 1)">Next</a>
 		    </li>
 		    <li ng-class="{disabled:pager.currentPage === pager.totalPages}">
-		        <a ng-click="getTicketsOfEvent(selectedEvent, pager.totalPages)">Last</a>
+		        <a ng-click="getTicketsOfEvent(isSearch, selectedEvent, pager.totalPages)">Last</a>
 		    </li>
 		</ul>
 	</div>
